--- a/package.json
+++ b/package.json
@@ -11,13 +11,17 @@
   },
   "dependencies": {
     "clsx": "^2.1.1",
+    "helmet": "^8.0.0",
+    "prop-types": "^15.8.1",
     "ra": "^0.9.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-helmet": "^6.1.0",
+    "react-helmet-async": "^2.0.5",
     "react-hook-form": "^7.53.0",
     "react-responsive-carousel": "^3.2.23",
-    "react-router-dom": "^6.27.0"
+    "react-router-dom": "^7.0.1",
+    "react-select": "^5.8.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.11.1",
@@ -30,6 +34,6 @@
     "eslint-plugin-react-refresh": "^0.4.12",
     "globals": "^15.9.0",
     "sass-embedded": "^1.79.4",
-    "vite": "^5.4.9"
+    "vite": "^5.4.11"
   }
 }
