--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react-hook-form": "^7.53.0",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^7.0.1",
-    "react-select": "^5.8.3"
+    "react-select": "^5.8.3",
+    "react-slider": "^2.0.6"
   },
   "devDependencies": {
     "@eslint/js": "^9.11.1",
@@ -34,6 +35,6 @@
     "eslint-plugin-react-refresh": "^0.4.12",
     "globals": "^15.9.0",
     "sass-embedded": "^1.79.4",
-    "vite": "^5.4.11"
+    "vite": "^6.0.1"
   }
 }
